--- a/Portal_de_Noticias/Portal/svc-portal-de-noticias.yaml
+++ b/Portal_de_Noticias/Portal/svc-portal-de-noticias.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: portal
+    app: portal-noticias
   ports:
     - port: 80 # Porta interna
       #targetPort: 80 # Porta que o Pod ta ouvindo.
